log
Wed 27 Mar 2024 06:37:50 PM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
acbcfc4
Wed 27 Mar 2024 06:46:35 PM UTC: 
 list.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
In file included from test.c:5:
list.c: In function ‘createNode’:
list.c:24:12: error: ‘Node’ has no member named ‘head’
   24 |     newNode->head = NULL;
      |            ^~
list.c:25:12: error: ‘Node’ has no member named ‘tail’
   25 |     newNode->tail = NULL;
      |            ^~
list.c:26:12: error: ‘Node’ has no member named ‘current’
   26 |     newNode->current = NULL;
      |            ^~
Compilation failed
32a53fe
Wed 27 Mar 2024 06:48:30 PM UTC: 
 list.c | 20 ++++++++++----------
 1 file changed, 10 insertions(+), 10 deletions(-)
In file included from list.c:3,
                 from test.c:5:
list.c: In function ‘createNode’:
list.c:24:12: error: ‘new’ undeclared (first use in this function)
   24 |     assert(new != NULL);
      |            ^~~
list.c:24:12: note: each undeclared identifier is reported only once for each function it appears in
In file included from test.c:5:
list.c:23:12: error: unused variable ‘newNode’ [-Werror=unused-variable]
   23 |     Node * newNode = (Node *)malloc(sizeof(Node));
      |            ^~~~~~~
list.c:29:1: error: control reaches end of non-void function [-Werror=return-type]
   29 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
23c4028
Wed 27 Mar 2024 06:48:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
667288e
Wed 27 Mar 2024 06:53:10 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
8cc3f63
Wed 27 Mar 2024 06:56:16 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
6a28a3e
Wed 27 Mar 2024 06:57:59 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
a1c2666
Wed 27 Mar 2024 07:00:39 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
000c1e6
Wed 27 Mar 2024 07:05:49 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
edc97ad
Wed 27 Mar 2024 07:06:21 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
884e29d
Wed 27 Mar 2024 07:10:53 PM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|2
total_score: 45/70
16e88f1
Wed 27 Mar 2024 07:11:51 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:77:3: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
   77 |   else
      |   ^~~~
list.c:79:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
   79 |     list->head->prev = newNode;
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
3505517
Wed 27 Mar 2024 07:12:09 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 45/70
5b03fc9
Wed 27 Mar 2024 07:12:24 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:72:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   72 |   if (list->head == NULL)
      |   ^~
list.c:74:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   74 |     list->tail = newNode;
      |     ^~~~
list.c:76:3: error: ‘else’ without a previous ‘if’
   76 |   else
      |   ^~~~
cc1: all warnings being treated as errors
Compilation failed
6b228fa
Wed 27 Mar 2024 07:12:44 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
e580569
